# udisks

./: Makefile.am  autogen.sh  configure.ac
data/: Makefile.am  org.freedesktop.UDisks2.conf.in
doc/: Makefile.am
src/: Makefile.am  udisksdaemon.c  udisksdaemon.h  udisksdaemontypes.h  udisksdaemonutil.c
src/tests/: Makefile.am
tools/: Makefile.am  udisksctl.c
udisks/: Makefile.am
